--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(OsPracticals main.c)
 add_executable(Program1 Practical1/fcfs.c)
 add_executable(sjfs Practical1/sjfs.c)
 add_executable(priority Practical1/priority.c)
+add_executable(srtf Practical2/srtf.c)
+add_executable(roundRobin Practical2/roundRobin.c)
+add_executable(priorityPreemptive Practical2/priorityPreemptive.c)
