--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(priority Practical1/priority.c)
 add_executable(srtf Practical2/srtf.c)
 add_executable(roundRobin Practical2/roundRobin.c)
 add_executable(priorityPreemptive Practical2/priorityPreemptive.c)
+add_executable(criticalSection Practical3/criticalSection.c)
