--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(srtf Practical2/srtf.c)
 add_executable(roundRobin Practical2/roundRobin.c)
 add_executable(priorityPreemptive Practical2/priorityPreemptive.c)
 add_executable(criticalSection Practical3/criticalSection.c)
+add_executable(producerConsumer Practical4/producerConsumer.c)
