--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(roundRobin Practical2/roundRobin.c)
 add_executable(priorityPreemptive Practical2/priorityPreemptive.c)
 add_executable(criticalSection Practical3/criticalSection.c)
 add_executable(producerConsumer Practical4/producerConsumer.c)
+add_executable(readerWriter Practical5/readerWriter.c)
