--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(criticalSection Practical3/criticalSection.c)
 add_executable(producerConsumer Practical4/producerConsumer.c)
 add_executable(readerWriter Practical5/readerWriter.c)
 add_executable(diningPhilosopher Practical6/diningPhilosopher.c)
+add_executable(fileManip Practical9/fileManip.c)
